Merge Branch B2005_09_20_Evaluations to HEAD