@@ -12,18 +12,24 @@ public class EvaluationType extends FenixUtil {
     public static final int FINAL = 2;
 
     public static final int ONLINE_TEST = 3;
+    
+    public static final int TEST = 4;
 
     public static final EvaluationType EXAM_TYPE = new EvaluationType(EXAM);
 
     public static final EvaluationType FINAL_TYPE = new EvaluationType(FINAL);
 
     public static final EvaluationType ONLINE_TEST_TYPE = new EvaluationType(ONLINE_TEST);
+    
+    public static final EvaluationType TEST_TYPE = new EvaluationType(TEST);
 
     public static final String EXAM_STRING = "Exame";
 
     public static final String FINAL_STRING = "Final";
 
     public static final String ONLINE_TEST_STRING = "Ficha de Trabalho";
+    
+    public static final String TEST_STRING = "Teste";
 
     private Integer type;
 
@@ -40,11 +46,13 @@ public class EvaluationType extends FenixUtil {
 
     public EvaluationType(String type) {
         if (type.equals(EvaluationType.EXAM_STRING))
-            this.type = new Integer(EvaluationType.EXAM);
+            this.type = Integer.valueOf(EvaluationType.EXAM);
         if (type.equals(EvaluationType.FINAL_STRING))
-            this.type = new Integer(EvaluationType.FINAL);
+            this.type = Integer.valueOf(EvaluationType.FINAL);
         if (type.equals(EvaluationType.ONLINE_TEST_STRING))
-            this.type = new Integer(EvaluationType.ONLINE_TEST);
+            this.type = Integer.valueOf(EvaluationType.ONLINE_TEST);
+        if (type.equals(EvaluationType.TEST_STRING))
+            this.type = Integer.valueOf(EvaluationType.TEST);
 
     }
 
@@ -64,22 +72,17 @@ public class EvaluationType extends FenixUtil {
             return EvaluationType.FINAL_STRING;
         if (type.intValue() == EvaluationType.ONLINE_TEST)
             return EvaluationType.ONLINE_TEST_STRING;
-
-        return "ERRO!"; // Nunca e atingido
+        if (type.intValue() == EvaluationType.TEST)
+            return EvaluationType.TEST_STRING;
+        
+        return "ERRO!";
     }
 
-    /**
-     * @return
-     */
     public Integer getType() {
         return type;
     }
 
-    /**
-     * @param integer
-     */
     public void setType(Integer integer) {
         type = integer;
     }
-
 }
